[metadata]
name = igvfd
version = attr: igvfd.__version__
description = Metadata database for IGVF project
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IGVF-DACC/igvfd
project_urls =
    Bug Tracker = https://github.com/IGVF-DACC/igvfd/issues

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.11
install_requires =
    PasteDeploy==2.1.1
    Pillow==7.0.0
    SQLAlchemy==1.3.13
    WSGIProxy2==0.4.6
    WebOb==1.8.6
    WebTest==2.0.35
    boto3==1.26.27
    botocore==1.29.27
    certifi==2023.7.22
    future==0.18.2
    gunicorn==20.1.0
    humanfriendly==6.1
    jsonschema[format]==4.4.0
    loremipsum==1.0.5
    passlib==1.7.2
    psutil==5.6.7
    psycopg2==2.9.6
    pyramid-localroles@git+https://github.com/IGVF-DACC/pyramid_localroles@v2.0.0
    pyramid-multiauth==0.9.0
    pyramid-translogger==0.1
    pyramid==2.0.1
    python-magic==0.4.15
    pytz==2019.3
    rdflib-jsonld==0.6.0
    rdflib==4.2.2
    repoze.debug==1.1
    rfc3987==1.3.8
    rutter==1.0
    subprocess_middleware==0.3
    sqlitedict==2.0.0
    transaction==3.0.0
    waitress==1.4.3
    xlrd==1.2.0
    zope.interface==5.3.0
    zope.sqlalchemy==1.2
    snovault@git+https://github.com/IGVF-DACC/snovault.git@IGVF-1006-fix-search-analyzers

[options.extras_require]
test =
    pytest==7.4.0
    pytest-instafail==0.4.2
    pytest-mock==2.0.0
    pytest-cov==2.8.1
    pytest-exact-fixtures@git+https://github.com/IGVF-DACC/pytest_exact_fixtures.git@v2.0.0
    coveralls==3.3.1
    moto[events]==3.1.18

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    load-development = igvfd.commands.load_development:main
    bootstrap = igvfd.commands.bootstrap:main
    load-alpha = igvfd.commands.load_alpha:main
    make-reference-db = igvfd.commands.make_reference_db:main
    make-audit-docstring-json = igvfd.commands.make_audit_docstring_json:main
    batchupgrade = snovault.batchupgrade:main
    batchupgrade-with-notification = igvfd.commands.batchupgrade_with_notification:main
    manage-mappings-with-notification = igvfd.commands.manage_mappings_with_notification:main
    generate-mappings = snovault.commands.generate_mappings:main
paste.app_factory =
    main = igvfd:main
paste.filter_app_factory =
    memlimit = igvfd.memlimit:filter_app
